added internal and external code

--- a/basic_exercise/index.html
+++ b/basic_exercise/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     
-    <script></script>
+    <script>
+        console.log("Hello from the Console");
+        document.write("Hello from the browser");
+    </script>
+    <script src="script.js"></script>
 </body>
 </html>
